--- a/sample/webApp/index.html
+++ b/sample/webApp/index.html
@@ -28,10 +28,10 @@
 
 <body>
 
-<script src="../build/js/packages/Konnectivity_Sample-shared/kotlin/Konnectivity_Sample-shared.js"></script>
+<script src="../../build/js/packages/konnectivity-sample-shared/kotlin/konnectivity-sample-shared.js"></script>
 <script>
-    const bootstrap = window["Konnectivity_Sample-shared"].com.mirego.konnectivity.sample.Bootstrap;
-    const ImageResource = window["Konnectivity_Sample-shared"].com.mirego.konnectivity.sample.ImageResource;
+    const bootstrap = window["konnectivity.sample:shared"].com.mirego.konnectivity.sample.Bootstrap;
+    const ImageResource = window["konnectivity.sample:shared"].com.mirego.konnectivity.sample.KonnectivityImageResource;
 
     const reachableImage = `<svg width="96" height="96" version="1.1" viewBox="114.3 93.21 469.04 371.12"><path d="m436.33 331.33c-9.332-9.332-23.332-9.332-32.668 0l-76.996 77-30.332-30.332c-9.332-9.332-23.332-9.332-32.668 0-9.332 9.332-9.332 23.332 0 32.668l46.668 46.668c9.332 9.332 23.332 9.332 32.668 0l93.332-93.332c9.332-9.3359 9.332-23.336-0.003907-32.672zm63-140c-35-81.664-130.66-121.33-214.66-84-53.668 23.332-91 72.332-98 130.67-49 11.668-81.668 63-70 112 11.664 39.668 51.332 70 93.332 70h18.668c-14-28-2.332-63 25.668-77 23.332-11.668 49-7 67.668 11.668l4.668 4.668 51.332-51.332c23.332-23.332 60.668-23.332 81.668 0 21 23.332 23.332 60.668 0 81.668l-30.34 30.328h37.336c65.332 0 116.67-51.332 116.67-116.67-0.003907-51.332-32.668-95.664-84.004-112z"/></svg>`
     const unreachableImage = `<svg width="96" height="96" version="1.1" viewBox="116.67 70 466.47 420"><path d="m529.67 450.33-301-301-72.336-72.332c-9.332-9.332-23.332-9.332-32.668 0-9.332 9.332-9.332 23.332 0 32.668l79.332 79.332c-7 14-11.668 30.332-14 46.668-49 11.668-81.668 63-67.668 112 7.0039 42 46.672 72.332 88.672 72.332h224l63 63c9.332 9.332 23.332 9.332 32.668 0 9.332-9.332 9.332-23.332 0-32.668zm28-219.33c-14-18.668-35-32.668-58.332-39.668-35.004-81.664-130.67-121.33-214.67-84-7 2.3359-14 7-21 11.668l275.33 275.33c51.332-39.664 58.332-114.33 18.668-163.33z"/></svg>`
